# web-fullstack-template

./: LICENSE  README.md  cookiecutter.json  test_template.py
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.hyphenated}}/: .env.dev  .env.prod  Dockerfile  README.md  docker-compose.yml  pyproject.toml  {{cookiecutter._dot_dockerignore}}  {{cookiecutter._dot_gitignore}}
{{cookiecutter.hyphenated}}/app/: main.py
{{cookiecutter.hyphenated}}/app/core/: config.py
{{cookiecutter.hyphenated}}/app/db/: connection.py  database.py
{{cookiecutter.hyphenated}}/app/routers/: root.py
{{cookiecutter.hyphenated}}/app/static/css/: input.css
{{cookiecutter.hyphenated}}/app/static/favicon/: README.md
{{cookiecutter.hyphenated}}/app/templates/home/: index.html
{{cookiecutter.hyphenated}}/app/templates/shared/: _layout.html  base.html
{{cookiecutter.hyphenated}}/migrations/: README.md  migration.py  schema.sql
{{cookiecutter.hyphenated}}/tests/: README.md  __init__.py  conftest.py  test_database.py
