[project]
name = "{{ cookiecutter.hyphenated }}"
version = "1.0.0"
requires-python = ">=3.12"
description = "{{ cookiecutter.description or "" }}"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "fastapi",
    "httpx",
    "itsdangerous",
    "jinja2",
    "loguru",
    {% if cookiecutter.database_url %}"psycopg2-binary",
    "sqlalchemy",
    {% endif %}"pydantic",
    "python-multipart",
    "pyyaml",
    "ua-parser",
    "user-agents",
    "uvicorn",
    "pydantic-settings",
]
[project.optional-dependencies]
tests = [
    "pytest",{% if cookiecutter.database_url %}
    "testcontainers[postgres]",{% endif %}
]

[tool.ruff]
line-length = 99
exclude = [".venv_uv*", "*/.*"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I", "N", "ANN"]
ignore = ["ANN101", "ANN102", "ANN003", "RUF033", "ANN204"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 20
preview = true
exclude = ["*.pyi", "**/temp/**", ".trash/**"]

